<resources>
    <string name="app_name">신조어사전</string>
    <string name="home">홈화면으로</string>
    <string name="search_word">신조어검색</string>
    <string name="initial">초성별 검색</string>
    <string name="hashtag">해쉬태그</string>
    <string name="extract_word">단어추출</string>
    <string name="add_word">신조어 추가</string>
    <string name="settings">설정</string>
    <string name="smart_fan">신조어사전</string>
</resources>