<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />

    <item android:title="@string/search_word">
        <menu>
            <item
                android:id="@+id/nav_category"
                android:icon="@drawable/ic_category"
                android:title="@string/category"/>
            <item
                android:id="@+id/nav_hashtag"
                android:icon="@drawable/ic_hashtag"
                android:title="@string/hashtag"/>
        </menu>
    </item>

    <item
        android:id="@+id/nav_extract_word"
        android:icon="@drawable/ic_extract_word"
        android:title="@string/extract_word" />

    <item
        android:id="@+id/nav_add_word"
        android:icon="@drawable/ic_add_word"
        android:title="@string/add_word" />

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings" />
</menu>